--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
     </repository>
     <repository>
       <id>ehd-github</id>
-      <url>https://maven.pkg.github.com/ ehn-digital-green-development/*</url>
+      <url>https://maven.pkg.github.com/ehn-digital-green-development/*</url>
     </repository>
   </repositories>
 
