--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -9,6 +9,11 @@ springdoc:
     enabled: true
   swagger-ui:
     path: /swagger
+issuance:
+  keyStoreFile: src/test/resources/cert_devtest_keystore.jks
+  keyStorePassword: dgca
+  certAlias: edgc_dev_test
+  privateKeyPassword: dgca
 dgc:
   trustAnchor:
     keyStorePath: classpath:keystore/dgc-ta.jks
