update kotlin-cert dependency

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
     <spring.security.version>5.4.6</spring.security.version>
     <lombok.version>1.18.20</lombok.version>
     <liquibase.version>4.3.3</liquibase.version>
+    <hcert-kotlin.version>0.2.0-SNAPSHOT</hcert-kotlin.version>
     <springdoc.version>1.5.7</springdoc.version>
     <junit.version>5.7.1</junit.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
@@ -284,7 +285,7 @@
     <dependency>
       <groupId>ehn.techiop.hcert</groupId>
       <artifactId>hcert-kotlin</artifactId>
-      <version>0.1.6-SNAPSHOT</version>
+      <version>${hcert-kotlin.version}</version>
     </dependency>
     <dependency>
       <groupId>com.augustcellars.cose</groupId>
