--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
     <!-- sonar -->
     <sonar.organization>eu-digital-green-certificates</sonar.organization>
     <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     <sonar.coverage.exclusions>
       **/DgcIssuanceApplication.java,
       **/model/*,
