--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>eu.europa.ec.dgc</groupId>
-  <artifactId>dgc-issuance-service</artifactId>
+  <artifactId>dgca-issuance-service</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <packaging>${packaging.format}</packaging>
 
