feat: improvements of ci

--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -2,35 +2,37 @@ name: ci-pull-request
 on:
   pull_request:
     types:
-      - opened
-      - synchronize
-      - reopened
+    - opened
+    - synchronize
+    - reopened
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - uses: s4u/maven-settings-action@v2
-        with:
-          githubServer: false
-          servers: |
-            [
-              {
-                "id": "dgc-github",
-                "username": "${{ secrets.GPR_USER }}",
-                "password": "${{ secrets.GPR_PAT }}"
-              },
-              {
-                "id": "ehd-github",
-                "username": "${{ secrets.GPR_USER }}",
-                "password": "${{ secrets.GPR_PAT }}"
-              }
-            ]
-      - name: Build package
-        run: mvn --batch-mode package
+    - uses: actions/setup-java@v2
+      with:
+        java-version: 11
+        distribution: adopt
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.m2/repository
+        key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+    - name: mvn
+      run: >-
+        mvn clean package
+        --batch-mode
+        --file ./pom.xml
+        --settings ./settings.xml
+        --define app.packages.username="${APP_PACKAGES_USERNAME}"
+        --define app.packages.password="${APP_PACKAGES_PASSWORD}";
+      env:
+        APP_PACKAGES_USERNAME: ${{ github.actor }}
+        APP_PACKAGES_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
+    - name: docker
+      run: >-
+        docker build .
+        --file ./Dockerfile;
