--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -1,10 +1,10 @@
-name: ci-main
+name: ci-release
 on:
-  push:
-    branches:
-    - main
+  release:
+    types:
+    - created
 jobs:
-  build:
+  release:
     runs-on: ubuntu-20.04
     steps:
     - uses: actions/setup-java@v2
@@ -22,9 +22,8 @@ jobs:
     - name: version
       run: >-
         APP_SHA=$(git rev-parse --short ${GITHUB_SHA});
-        APP_REV=$(git rev-list --tags --max-count=1);
-        APP_TAG=$(git describe --tags ${APP_REV} 2> /dev/null || echo 0.0.0);
-        APP_VERSION=${APP_TAG}-${APP_SHA};
+        APP_TAG=${GITHUB_REF/refs\/tags\/}
+        APP_VERSION=${APP_TAG};
         echo "APP_SHA=${APP_SHA}" >> ${GITHUB_ENV};
         echo "APP_TAG=${APP_TAG}" >> ${GITHUB_ENV};
         echo "APP_VERSION=${APP_VERSION}" >> ${GITHUB_ENV};
@@ -35,7 +34,7 @@ jobs:
         --file ./pom.xml
         --settings ./settings.xml
         --define newVersion="${APP_VERSION}";
-        mvn clean verify
+        mvn clean deploy
         --batch-mode
         --file ./pom.xml
         --settings ./settings.xml
@@ -52,7 +51,9 @@ jobs:
         --password-stdin;
         docker build .
         --file ./Dockerfile
+        --tag "${APP_PACKAGES_URL}:latest"
         --tag "${APP_PACKAGES_URL}:${APP_VERSION}";
+        docker push "${APP_PACKAGES_URL}:latest";
         docker push "${APP_PACKAGES_URL}:${APP_VERSION}";
       env:
         APP_PACKAGES_URL: docker.pkg.github.com/${{ github.repository }}/container
