--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8090
+  port: 8080
 spring:
   profiles:
     group:
-      "dev": "h2"
+      dev: h2
   application:
     name: eu-digital-green-certificates-issuence
   datasource:
@@ -19,11 +19,11 @@ management:
   endpoints:
     web:
       exposure:
-        exclude: "*"
+        exclude: '*'
   server:
     port: -1
 issuance:
-  dgciPrefix: "dgci:V1:DE"
+  dgciPrefix: dgci:V1:DE
 dgc:
   trustAnchor:
     keyStorePath: /ec/prod/app/san/dgc/dgc-ta.jks
