fix: ci workflows

--- a/.github/workflows/ci-sonar.yml
+++ b/.github/workflows/ci-sonar.yml
@@ -1,45 +1,39 @@
-name: Sonar Cloud Check
+name: ci-sonar
 on:
-  workflow_dispatch:
   push:
     branches:
-      - main
+    - main
   pull_request:
     types:
-      - opened
-      - synchronize
-      - reopened
+    - opened
+    - synchronize
+    - reopened
 jobs:
-  build:
-    runs-on: ubuntu-latest
+  sonar:
+    runs-on: ubuntu-20.04
     steps:
-      - name: Checkout Git
-        uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
-      - name: Setup Java
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
-      - uses: s4u/maven-settings-action@v2
-        with:
-          githubServer: false
-          servers: |
-            [
-              {
-                "id": "dgc-github",
-                "username": "${{ secrets.GPR_USER }}",
-                "password": "${{ secrets.GPR_PAT }}"
-              },
-              {
-                "id": "ehd-github",
-                "username": "${{ secrets.GPR_USER }}",
-                "password": "${{ secrets.GPR_PAT }}"
-              }
-            ]
-      - name: Sonar Check
-        run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/setup-java@v2
+      with:
+        java-version: 11
+        distribution: adopt
+    - uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
+    - uses: actions/cache@v2
+      with:
+        path: |
+          ~/.m2/repository
+        key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
+    - name: mvn
+      run: >-
+        mvn verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
+        --batch-mode
+        --file ./pom.xml
+        --settings ./settings.xml
+        --define app.packages.username="${APP_PACKAGES_USERNAME}"
+        --define app.packages.password="${APP_PACKAGES_PASSWORD}";
+      env:
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        APP_PACKAGES_USERNAME: ${{ github.actor }}
+        APP_PACKAGES_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
