--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 
   <distributionManagement>
     <repository>
-      <id>github</id>
+      <id>dgc-github</id>
       <url>https://maven.pkg.github.com/${github.organization}/${github.project}</url>
     </repository>
   </distributionManagement>
