--- a/.github/workflows/ci-pull-request.yml
+++ b/.github/workflows/ci-pull-request.yml
@@ -22,17 +22,17 @@ jobs:
           ~/.m2/repository
         key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
     - name: mvn
-      run: >-
-        mvn clean package
-        --batch-mode
-        --file ./pom.xml
-        --settings ./settings.xml
-        --define app.packages.username="${APP_PACKAGES_USERNAME}"
-        --define app.packages.password="${APP_PACKAGES_PASSWORD}";
+      run: |-
+        mvn clean package \
+        --batch-mode \
+        --file ./pom.xml \
+        --settings ./settings.xml \
+        --define app.packages.username="${APP_PACKAGES_USERNAME}" \
+        --define app.packages.password="${APP_PACKAGES_PASSWORD}"
       env:
         APP_PACKAGES_USERNAME: ${{ github.actor }}
         APP_PACKAGES_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
     - name: docker
-      run: >-
-        docker build .
-        --file ./Dockerfile;
+      run: |-
+        docker build . \
+        --file ./Dockerfile
