--- a/.github/workflows/ci-main.yml
+++ b/.github/workflows/ci-main.yml
@@ -20,40 +20,36 @@ jobs:
           ~/.m2/repository
         key: ${{ runner.os }}-${{ hashFiles('**/pom.xml') }}
     - name: version
-      run: >-
-        APP_SHA=$(git rev-parse --short ${GITHUB_SHA});
-        APP_REV=$(git rev-list --tags --max-count=1);
-        APP_TAG=$(git describe --tags ${APP_REV} 2> /dev/null || echo 0.0.0);
-        APP_VERSION=${APP_TAG}-${APP_SHA};
-        echo "APP_SHA=${APP_SHA}" >> ${GITHUB_ENV};
-        echo "APP_TAG=${APP_TAG}" >> ${GITHUB_ENV};
-        echo "APP_VERSION=${APP_VERSION}" >> ${GITHUB_ENV};
+      run: |-
+        APP_SHA=$(git rev-parse --short ${GITHUB_SHA})
+        APP_LATEST_REV=$(git rev-list --tags --max-count=1)
+        APP_LATEST_TAG=$(git describe --tags ${APP_LATEST_REV} 2> /dev/null || echo 0.0.0)
+        echo "APP_VERSION=${APP_LATEST_TAG}-${APP_SHA}" >> ${GITHUB_ENV}
     - name: mvn
-      run: >-
-        mvn versions:set
-        --batch-mode
-        --file ./pom.xml
-        --settings ./settings.xml
-        --define newVersion="${APP_VERSION}";
-        mvn clean verify
-        --batch-mode
-        --file ./pom.xml
-        --settings ./settings.xml
-        --define app.packages.username="${APP_PACKAGES_USERNAME}"
-        --define app.packages.password="${APP_PACKAGES_PASSWORD}";
+      run: |-
+        mvn versions:set \
+        --batch-mode \
+        --file ./pom.xml \
+        --settings ./settings.xml \
+        --define newVersion="${APP_VERSION}"
+        mvn clean verify \
+        --batch-mode \
+        --file ./pom.xml \
+        --settings ./settings.xml \
+        --define app.packages.username="${APP_PACKAGES_USERNAME}" \
+        --define app.packages.password="${APP_PACKAGES_PASSWORD}"
       env:
         APP_PACKAGES_USERNAME: ${{ github.actor }}
         APP_PACKAGES_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
     - name: docker
-      run: >-
-        echo "${APP_PACKAGES_PASSWORD}" |
-        docker login "${APP_PACKAGES_URL}"
-        --username "${APP_PACKAGES_USERNAME}"
-        --password-stdin;
-        docker build .
-        --file ./Dockerfile
-        --tag "${APP_PACKAGES_URL}:${APP_VERSION}";
-        docker push "${APP_PACKAGES_URL}:${APP_VERSION}";
+      run: |-
+        echo "${APP_PACKAGES_PASSWORD}" | docker login "${APP_PACKAGES_URL}" \
+        --username "${APP_PACKAGES_USERNAME}" \
+        --password-stdin
+        docker build . \
+        --file ./Dockerfile \
+        --tag "${APP_PACKAGES_URL}:${APP_VERSION}"
+        docker push "${APP_PACKAGES_URL}:${APP_VERSION}"
       env:
         APP_PACKAGES_URL: docker.pkg.github.com/${{ github.repository }}/dgca-issuance-service
         APP_PACKAGES_USERNAME: ${{ github.actor }}
