--- a/pom.xml
+++ b/pom.xml
@@ -365,6 +365,15 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>**/DgcIssuanceApplication.java</exclude>
+            <exclude>**/restapi/dto/*</exclude>
+            <exclude>**/repository/*</exclude>
+            <exclude>**/entity/*</exclude>
+            <exclude>**/ErrorHandler.java</exclude>
+          </excludes>
+        </configuration>
         <executions>
           <execution>
             <goals>
