--- a/pom.xml
+++ b/pom.xml
@@ -56,16 +56,6 @@
     <sonar.organization>eu-digital-green-certificates</sonar.organization>
     <sonar.projectKey>${sonar.organization}_${project.artifactId}</sonar.projectKey>
     <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-    <sonar.coverage.exclusions>
-      **/DgcIssuanceApplication.java,
-      **/model/*,
-      **/mapper/*,
-      **/dbencryption/*,
-      **/entity/*,
-      **/CertificateUtils.java,
-      **/DgcKeyStore.java,
-      **/ErrorHandler.java
-    </sonar.coverage.exclusions>
   </properties>
 
   <url>https://github.com/eu-digital-green-certificates/dgca-issuance-service</url>
@@ -365,6 +355,15 @@
       <plugin>
         <groupId>org.jacoco</groupId>
         <artifactId>jacoco-maven-plugin</artifactId>
+        <configuration>
+          <excludes>
+            <exclude>**/DgcIssuanceApplication.java</exclude>
+            <exclude>**/restapi/dto/*</exclude>
+            <exclude>**/repository/*</exclude>
+            <exclude>**/entity/*</exclude>
+            <exclude>**/ErrorHandler.java</exclude>
+          </excludes>
+        </configuration>
         <executions>
           <execution>
             <goals>
