--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,9 @@
 server:
   port: 8080
 spring:
-  profiles:
-    group:
-      dev: h2
   application:
-    name: eu-digital-green-certificates-issuence
+    name: dgca-issuance-service
   datasource:
-    jndi-name: false
     driver-class-name: org.h2.Driver
     url: jdbc:h2:mem:dgc;DB_CLOSE_ON_EXIT=FALSE;DB_CLOSE_DELAY=-1;
     username: sa
@@ -17,29 +13,44 @@ spring:
   liquibase:
     enabled: false
     change-log: classpath:db/changelog.xml
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 management:
+  endpoint:
+    info:
+      enabled: true
+    health:
+      enabled: true
   endpoints:
+    enabled-by-default: false
     web:
+      base-path: /management
       exposure:
-        exclude: '*'
-  server:
-    port: -1
+        include: info,health
+springdoc:
+  api-docs:
+    path: /api/docs
+    enabled: true
+  swagger-ui:
+    path: /swagger
 issuance:
   dgciPrefix: "dgci:V1:DE"
   keyStoreFile: test_certs/cert_devtest_keystore.jks
   keyStorePassword: dgca
-  certAlias: edgc_dev_test
+  certAlias: edgc_dev_ec
   privateKeyPassword: dgca
   countryCode: DE
 dgc:
   trustAnchor:
-    keyStorePath: /ec/prod/app/san/dgc/dgc-ta.jks
+    keyStorePath: classpath:keystore/dgc-ta.jks
+#dgc:
+#  trustAnchor:
+#    keyStorePath: /ec/prod/app/san/dgc/dgc-ta.jks
     keyStorePass: dgc-p4ssw0rd
     certificateAlias: dgc_trust_anchor
   cert-auth:
     header-fields:
       thumbprint: X-SSL-Client-SHA256
       distinguished-name: X-SSL-Client-DN
-springdoc:
-  api-docs:
-    enabled: false
