--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,3 +46,22 @@ issuance:
   certAlias: edgc_dev_ec
   privateKeyPassword: dgca
   countryCode: DE
+dgc:
+  gateway:
+    connector:
+      enabled: false
+      endpoint: https://dgc-gateway.example.com
+      proxy:
+        enabled: false
+      max-cache-age: 300
+      tls-trust-store:
+        password: dgcg-p4ssw0rd
+        path: classpath:tls_trust_store.p12
+      tls-key-store:
+        alias: 1
+        password: dgcg-p4ssw0rd
+        path: classpath:tls_key_store.p12
+      trust-anchor:
+        alias: ta
+        password: dgcg-p4ssw0rd
+        path: classpath:trust_anchor.jks
