--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -17,6 +17,7 @@ issuance:
   certAlias: edgc_dev_ec
   privateKeyPassword: dgca
   countryCode: DE
+  tanExpirationHours: 24
 springdoc:
   api-docs:
     path: /api/docs
