--- a/pom.xml
+++ b/pom.xml
@@ -242,6 +242,11 @@
       <version>1.4.31</version>
     </dependency>
     <dependency>
+      <groupId>com.fasterxml.jackson.dataformat</groupId>
+      <artifactId>jackson-dataformat-cbor</artifactId>
+      <version>2.12.3</version>
+    </dependency>
+    <dependency>
       <groupId>io.pivotal.cfenv</groupId>
       <artifactId>java-cfenv-boot</artifactId>
       <version>2.3.0</version>
