--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -46,7 +46,11 @@ issuance:
   certAlias: edgc_dev_ec
   privateKeyPassword: dgca
   countryCode: DE
-  tanExpirationHours: 24
+  tanExpirationHours: 2
+  expiration:
+    vaccination: 365
+    recoverty: 365
+    test: 60
 dgc:
   gateway:
     connector:
