--- a/pom.xml
+++ b/pom.xml
@@ -247,6 +247,11 @@
       <version>2.12.3</version>
     </dependency>
     <dependency>
+      <groupId>com.nimbusds</groupId>
+      <artifactId>nimbus-jose-jwt</artifactId>
+      <version>9.9.2</version>
+    </dependency>
+    <dependency>
       <groupId>io.pivotal.cfenv</groupId>
       <artifactId>java-cfenv-boot</artifactId>
       <version>2.3.0</version>
