--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,8 @@
     <spring.security.version>5.4.6</spring.security.version>
     <lombok.version>1.18.20</lombok.version>
     <liquibase.version>4.3.3</liquibase.version>
-    <hcert-kotlin.version>0.2.2-SNAPSHOT</hcert-kotlin.version>
+    <hcert-kotlin.version>1.0.1-SNAPSHOT</hcert-kotlin.version>
+    <kotlin.version>1.5.10</kotlin.version>
     <springdoc.version>1.5.7</springdoc.version>
     <junit.version>5.7.1</junit.version>
     <mapstruct.version>1.4.2.Final</mapstruct.version>
@@ -77,7 +78,7 @@
     </repository>
     <repository>
       <id>ehd-github</id>
-      <url>https://maven.pkg.github.com/ehn-digital-green-development/*</url>
+      <url>https://maven.pkg.github.com/ehn-dcc-development/*</url>
     </repository>
   </repositories>
 
@@ -235,18 +236,23 @@
     </dependency>
     <dependency>
       <groupId>ehn.techiop.hcert</groupId>
-      <artifactId>hcert-kotlin</artifactId>
+      <artifactId>hcert-kotlin-jvm</artifactId>
       <version>${hcert-kotlin.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlinx</groupId>
+      <artifactId>kotlinx-serialization-json</artifactId>
+      <version>1.2.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jetbrains.kotlin</groupId>
+      <artifactId>kotlin-stdlib-jdk8</artifactId>
+      <version>${kotlin.version}</version>
     </dependency>
     <dependency>
       <groupId>com.augustcellars.cose</groupId>
       <artifactId>cose-java</artifactId>
       <version>1.1.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.jetbrains.kotlin</groupId>
-      <artifactId>kotlin-stdlib-jdk8</artifactId>
-      <version>1.4.31</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.dataformat</groupId>
