fix backend issuing for hcert kotlin 1.0.1

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -55,7 +55,7 @@ issuance:
   endpoints:
     frontendIssuing: true
     backendIssuing: false
-    testTools: true
+    testTools: false
     wallet: true
     publishCert: true
     did: true
