--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+          <groupId>org.apache.logging.log4j</groupId>
+          <artifactId>log4j-to-slf4j</artifactId>
+          <version>2.15.0</version>
+        </dependency>
        <dependency>
           <groupId>org.apache.logging.log4j</groupId>
           <artifactId>log4j-api</artifactId>
